--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,15 @@ img {
 
 }
 
+.lasts {
+	margin-top: 5vh;
+	background-image: url(../img/SVG/volk.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 100%;
+	min-height: 90vh;
+
+}
 .mission {
 	margin-top: 5vh;
 }
