--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,11 @@ img {
 
 .mains {
 	margin-top: 5vh;
-	background-image: url(../img/SVG/sayItAgain.svg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-	background-size: cover;
+	background-image: url(../img/SVG/sayItAgain.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position-x: center;
+	background-position-y: center;
 	width: 100%;
 	min-height: 90vh;
 
