--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ img {
 
 .mains {
 	margin-top: 5vh;
-	background-image: url(../img/SVG/sayItAgain.svg);
+	background-image: url(../img/aniBoy.mp4);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position-x: center;
@@ -31,4 +31,8 @@ img {
 .mission {
 	margin-top: 5vh;
 	font-size: 24px;
+}
+
+.aniboy {
+
 }
