--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,16 @@ img {
 	font-size: 24px;
 }
 
-.aniboy {
 
+	/* The only rule that matters */
+#video-background {
+/*  making the video fullscreen  */
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
 }
