--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ img {
 
 .mains {
 	margin-top: 5vh;
-	background-image: url(../img/sayItAgain.svg);
+	background-image: url(../img/aniBoy.gif);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position-x: center;
