added that insta

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ svg {
 	background-position-x: center;
 	background-position-y: center;
 	width: 100%; */
-	min-height: 100vh;
+	//min-height: 100vh;
 
 	/**position: fixed;
     top: 0;
