--- a/css/style.css
+++ b/css/style.css
@@ -62,11 +62,20 @@ svg {
 	//margin-top: 5vh;
 	font-size: 24px;
 	color: #808080;
+
 }
 
 .mission div  {
-	min-height: 75vh;
+	min-height: 100vh;
 	text-align: center;
+	//background-image: url(../img/SVG/drop.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 100%;
+}
+
+.mission div p{
+	padding-top: 3vh;
 }
 
 
